--- a/style.css
+++ b/style.css
@@ -147,7 +147,12 @@
     
     
     
+   .nonono{
+    font-size: 5rem;
+    color: pink;
+    background-color: black;
     
+   }
     
     
     
